# pymovie

./: .gitignore  LICENSE  PyMovie.ini  README.rst  pyproject.toml  requirements.txt  selectProfile.py  setup.py  setup.py.legacy
Documentation pics/: .gitignore
scripts/: build-exe.ps1
src/: PyMovie.ui  gui.py
src/pymovie/: I2-digits.p  I3-digits.p  NE3Lut.p  PyMovie-doc.odt  PyMovie-info.docx  PyMovie-info.odt  PyMovie.bat  PyMovie.ini  PyMovie.ui  PyMovieScrollable.ui  SER.py  alias_lnk_resolver.py  aperture.py  apertureEdit.py  apertureEditDialog.py  apertureEditDialog.ui  apertureNameDialog.py  apertureNameDialog.ui  aperturesFileTagDialog.py  aperturesFileTagDialog.ui  astrometry_client.py  astropyStarExtractionBackgound.py  avi_to_fits.py  checkForNewerVersion.py  gammaUtils.py  gui.py  helpDialog.py  helpDialog.ui  hotPixelDialog.py  hotPixelDialog.ui  main.py  ocr.py  ocrCharacterBox.py  ocrProfileNameDialog.py  ocrProfileNameDialog.ui  pyote_handoff.py  run-pymovie-mac.bat  selectHotPixelProfile.py  selectHotPixelProfile.ui  selectProfile.py  (+7 more)
src/pymovie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
