[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymovie"
dynamic = ["version"]
description = "PyMovie is a lightcurve extractor for astronomical videos"
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.11"
authors = [{ name = "Bob Anderson", email = "bob.anderson.ok@gmail.com" }]
maintainers = [{ name = "Bob Anderson", email = "bob.anderson.ok@gmail.com" }]
keywords = ["desktop app", "lightcurve extraction from astronomical videos"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "PyQt5==5.15.7",
    "PyQt5-Qt5==5.15.2;   platform_system=='Windows'",
    "PyQt5-sip==12.11.0",
    "pyqtgraph==0.12.4",
    "numpy==1.23.1",
    "scipy==1.8.1",
    "matplotlib==3.5.2",
    "opencv-python==4.8.1.78",
    "Pillow==9.2.0",
    "scikit-image==0.19.3",
    "tifffile==2022.5.4",
    "imageio==2.19.5",
    "astropy==5.1",
    "astroquery==0.4.6",
    "pyvo==1.3",
    "numba==0.56.4",
    "llvmlite==0.39.1",
    "ravf==1.0.1",
    "Adv2==1.2.0",
    "Resource==0.2.1",
    "JsonSir==0.0.2",
    "JsonForm==0.0.2",
    "PyYAML==6.0",
    "keyring==23.7.0",
    "requests==2.28.1",
    "beautifulsoup4==4.11.1",
    "html5lib==1.1",
    "more-itertools==9.1.0",
    "winshell==0.6;   platform_system=='Windows'",
    "pypiwin32;       platform_system=='Windows'",
]

[project.urls]
Homepage = "https://github.com/bob-anderson-ok/pymovie"

[project.gui-scripts]
pymovie = "pymovie.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pymovie = ["*.ui", "*.bat", "*.ini", "*.txt"]

[tool.setuptools.dynamic]
version = { attr = "pymovie.version.__version__" }
